--- a/Recettes_cake_design/Presentation_cake_design/css/style.css
+++ b/Recettes_cake_design/Presentation_cake_design/css/style.css
@@ -20,13 +20,14 @@ body {
     /* Header */
 
 header {
+    background-color: #ebe3ec;
     margin: 0;
     padding: 0;
 }
 
 #tittle-intro h1 {
     font-family: 'Courgette', cursive;
-    color: #5c340c;
+    color: #a10684;
     text-align: right;
     padding-top: 50px;
     margin-bottom: 50px;
