--- a/A_Propos/css/style.css
+++ b/A_Propos/css/style.css
@@ -247,16 +247,16 @@ form {
 }
 
 .footer i {
-    font-size: 40px;
-    margin: 30px 0 20px;
-    color: #5c340c;
-    height: 30px;
+	font-size: 40px;
+	margin: 30px 0 20px;
+	color: #582900;
+	height: 30px;
 }
 
 .footer i:hover {
-    font-size: 50px;
-    transition: 0.3s ease-in-out;
-    color: #a10684;
+	font-size: 50px;
+	transition: 0.3s ease-in-out;
+	color: #a10684;
 }
 
 /* VERSION DESKTOP */
