--- a/css/style.css
+++ b/css/style.css
@@ -319,12 +319,13 @@ form {
 	padding: 5px 0;
 	border-radius: 3px;
 	background-color: #f1f1f1;
+	transition: 0.6s ease-in-out;
 }
 
 .form-goup #submit:hover {
-	background-color: #582900;
+	background-color: #a10684;
 	color: #fff;
-	transition: 0.4s ease-in-out;
+	
 }
 
 	/* FOOTER */
@@ -338,11 +339,11 @@ form {
     margin: 30px 0 20px;
     color: #582900;
     height: 30px;
+	transition: 0.3s ease-in-out;
 }
 
 .footer i:hover {
     font-size: 50px;
-    transition: 0.3s ease-in-out;
     color: #a10684;
 }
 
