--- a/Recettes_de_cremes/Creme_anglaise/css/style.css
+++ b/Recettes_de_cremes/Creme_anglaise/css/style.css
@@ -1,5 +1,4 @@
 /* Général */
-
 html {
 	scroll-behavior: smooth;
 }
@@ -41,7 +40,7 @@ header {
 }
 
 .text-intro p {
-	margin-bottom: 18px;
+	margin-bottom: 20px;
 	color: #5c340c;
 	font-size: 20px;
 	font-family: 'Nunito', sans-serif;
@@ -51,12 +50,6 @@ header {
 	color: #a10684;
 	font-size: 20px;
 	text-align: center;
-}
-
-.crown i {
-	font-size: 3rem;
-	text-align: center;
-	color: #FFD700;
 }
 
 	/* NAV-BAR */
@@ -132,43 +125,128 @@ header {
 	max-width: 85%;
 }
 
-#titreTop h2 {
-	margin: 90px auto 50px;
-	text-align: center;
+#main h2 {
 	color: #5c340c;
-	font-size: 70px;
 	font-family: 'Parisienne', cursive;
+	margin-top: 90px;
+	margin-bottom: 90px;
+	font-size: 70px;
 }
 
-#main h5 {
-	margin-top: 20px;
+.imgTop img {
+	width: 70%;
+	margin-right: auto;
+	margin-left: auto;
+}
+
+	/* TEXTE INTRO  */
+
+#main1 .preTexte {
+	margin-top: 60px;
+	margin-bottom: 40px;
+	font-size: 1.3rem;
+	text-align: center;
+}
+
+.card {
+	border-radius: 4px;
+	background-color: #f1f1f1;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	border: 1px solid #a10684;
+	margin-top: 10px;
+	margin-bottom: 20px;
+}
+
+#main2 h3 {
 	font-family: 'Handlee', cursive;
-	font-size: 25px;
-}
-
-#main img {
-	border: 2px solid #5c340c;
-	border-radius: 5px;
-}
-
-#main a {
+	margin-bottom: 15px;
 	color: #5c340c;
 }
 
-#main a:hover {
+#images1 img {
+	width: 40%;
+	margin-right: auto;
+	margin-left: auto;
+	
+}
+
+#main3 h3 {
+	font-family: 'Handlee', cursive;
+	margin-bottom: 15px;
+	color: #5c340c;
+}
+
+#main3 span i {
+	font-size: 20px;
 	color: #a10684;
-	text-decoration: none;
+	margin-right: 10px;
+	margin-left: 3px;
 }
 
-#main img:hover {
+.ingredients {
+	font-size: 1.2rem;
+}
+
+#images3 {
+	width: 80%;
+}
+
+#images3 img {
+	border: 3px solid #5c340c;
+	border-radius: 4px;
+}
+
+#images3 img:hover {
 	border: 3px solid #a10684;
+	border-radius: 4px;
 }
 
+#images2 img {
+	padding: 0;
+	width: 45%;
+	margin-top: 50px;
+	margin-right: auto;
+	margin-left: auto;
+}
 
-	/* SOCIAL */
+#main4 {
+	margin: 30px 0 0;
+}
 
-#social {
-	margin-top: 40px;
+#main4 .container {
+	width: 70%;
+}
+
+#main4 .about {
+	font-size: 1.3rem;
+	text-align: center;
+	line-height: 40px;
+}
+
+#main4 .gras {
+	text-align: center;
+	margin-top: 10px;
+	font-family: 'Handlee', cursive;
+	color: #5c340c;
+	font-size: 1.8rem;
+}
+
+#main4 .avatar img {
+	border-radius: 100px;
+	width: 28%;
+	border: 2px solid #a10684;
+}
+
+.crown i {
+	font-size: 3rem;
+	color: #FFD700;
+}
+
+   /* SOCIAL */
+   
+ #social {
+	margin-top: 20px;
 }
 
 #social .center {
@@ -224,33 +302,31 @@ header {
 	box-shadow: 0 0 0 6px #ff3346;
 }
 
-	/* NEWSLETTER  */
-
-#newsletter {
-	margin: 20px 0 20px;
-}
-
-#newsletter span i {
-	color: #a10684;
-	font-size: 20px;
-	text-align: center;
-}
-
-#newsletter p {
-	font-size: 20px;
-	font-family: 'Nunito', sans-serif;
-	color: #5c340c;
-}
-
 	/* FORMULAIRE */
+
+#formulaire {
+	margin-top: 40px;
+	margin-bottom: 20px;
+}
 
 form {
 	max-width: 1100px;
 	margin: 0 auto;
 }
 
-.form-goup input {
-	padding: 5px 0;
+#formulaire .title {
+	font-family: 'Handlee', cursive;
+	color: #5c340c;
+	font-size: 25px;
+	margin-bottom: 20px;
+}
+
+#formulaire em {
+	color: #ff0000;
+}
+
+#formulaire input {
+	padding: 8px 0;
 	background-color: #f1f1f1;
 	border-radius: 3px;
 	width: 100%;
@@ -258,15 +334,22 @@ form {
 	border: 1px solid;
 }
 
-.form-goup #submit {
-	margin-top: 24px;
+#formulaire textarea {
+	background-color: #f1f1f1;
+	border-radius: 3px;
+	border: 1px solid;
 	width: 100%;
-	padding: 5px 0;
+}
+
+#formulaire #submit {
+	margin-top: 8px;
+	width: 100%;
+	padding: 8px 0;
 	border-radius: 3px;
 	background-color: #f1f1f1;
 }
 
-.form-goup #submit:hover {
+#formulaire #submit:hover {
 	background-color: #582900;
 	color: #fff;
 	transition: 0.4s ease-in-out;
@@ -287,11 +370,12 @@ form {
 
 .footer i:hover {
     font-size: 50px;
-    transition: 0.3s ease-in-out;
+    transition: 0.4s ease-in-out;
     color: #a10684;
 }
 
-	/* VERSION DESKTOP */
+
+/* VERSION DESKTOP */
 @media screen and (min-width:1025px) {
 	.container {
 		max-width: 80%;
