--- a/Recettes_healthy/Crème_dessert_chocolat/css/style.css
+++ b/Recettes_healthy/Crème_dessert_chocolat/css/style.css
@@ -127,8 +127,7 @@ header {
 #main h2 {
     color: #5c340c;
     font-family: 'Parisienne', cursive;
-    margin-top: 90px;
-    margin-bottom: 90px;
+    margin: 90px 0;
     font-size: 60px;
 }
 
