--- a/Recettes_cookies/Cookies_moelleux/css/style.css
+++ b/Recettes_cookies/Cookies_moelleux/css/style.css
@@ -20,9 +20,9 @@ body {
 	/* Header */
 
 header {
+    background-color: #ebe3ec;
     margin: 0;
     padding: 0;
-	background-color: #ebe3ec;
 }
 
 #tittle-intro h1 {
@@ -96,14 +96,14 @@ header {
 }
 
 #menu-deroulant ul li a {
-	padding: 5px 6px;
+	padding: 5px 8px;
 }
 
 #menu-deroulant a {
     text-decoration: none;
     display: block;
 	text-align: left;
-	background-color: #f1f1f1;
+	background-color: #f1f1f1; 
 }
 
 #menu-deroulant ul {
@@ -129,29 +129,15 @@ header {
 	color: #5c340c;
 	font-family: 'Parisienne', cursive;
 	margin-top: 90px;
-	margin-bottom: 90px;
+	margin-bottom: 60px;
 	font-size: 60px;
 }
 
 .imgTop img {
-	width: 90%;
+	width: 80%;
 	margin-right: auto;
 	margin-left: auto;
-}
-
-#main1 .preTexte {
-	margin-top: 60px;
 	margin-bottom: 40px;
-	font-size: 1.3rem;
-	text-align: center;
-}
-
-#main1 .preTexte i {
-	color: #5c340c;
-	font-size: 2.2rem;
-	margin-left: 10px;
-	margin-bottom: 20px;
-	text-align: center;
 }
 
 .card {
@@ -164,16 +150,17 @@ header {
 	margin-bottom: 10px;
 }
 
-#main h3 {
+#main2 h3 {
 	font-family: 'Handlee', cursive;
 	margin-bottom: 15px;
 	color: #5c340c;
 }
 
-#main2 h3 {
-	font-family: 'Handlee', cursive;
-	margin-bottom: 15px;
-	color: #5c340c;
+#images1 img {
+	width: 30%;
+	margin-top: 40px;
+	margin-right: auto;
+	margin-left: auto;
 }
 
 #main3 h3 {
@@ -189,48 +176,31 @@ header {
 	margin-left: 3px;
 }
 
-.ingredients {
-	font-size: 1.2rem;
-}
-
-#main img {
-	margin-bottom: 80px;
-}
-
-#images1 img {
-	width: 45%;
-	margin-right: auto;
-	margin-left: auto;
-}
-
-#images2 img {
-	margin-top: 40px;
-	margin-bottom: 40px;
-	width: 80%;
-	margin-right: auto;
-	margin-left: auto;
-}
-
-#images_cadre1 img {
-	margin-bottom: 20px;
-}
-
-#images_cadre2 img {
-	margin-bottom: 20px;
-}
-
 #images3 {
 	padding-top: 100px;
 	width: 100%;
 }
 
 #images3 img {
-	border: 2px solid #5c340c;
+	border: 3px solid #5c340c;
 	border-radius: 4px;
 }
 
 #images3 img:hover {
 	border: 3px solid #a10684;
+	border-radius: 4px;
+}
+
+#images2 img {
+	margin-top: 40px;
+	margin-bottom: 40px;
+	width: 70%;
+	margin-right: auto;
+	margin-left: auto;
+}
+
+#main4 .container {
+	width: 70%;
 }
 
 #main4 .about {
@@ -248,24 +218,24 @@ header {
 	font-size: 1.8rem;
 }
 
-#main4 img {
+#main4 .avatar img {
 	border-radius: 100px;
-	width: 10%;
+	width: 28%;
 	border: 2px solid #a10684;
-	text-align: center;
-	margin-left: auto;
-	margin-right: auto;
+}
+
+.crown i {
+	font-size: 3rem;
+	color: #c8ad7f;
 }
 
    /* social */
-
-#social1 .center {
-	display: flex;
-	justify-content: center;
-	align-items: center;
+   
+ #social {
+	margin-top: 20px;
 }
 
-#social2 .center {
+#social .center {
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -378,28 +348,26 @@ form {
 }
 
 .footer i {
-	font-size: 40px;
-	margin: 30px 0 20px;
-	color: #5c340c;
-	height: 30px;
+    font-size: 40px;
+    margin: 30px 0 20px;
+    color: #5c340c;
+    height: 30px;
 }
 
 .footer i:hover {
     font-size: 50px;
-    transition: 0.3s ease-in-out;
+    transition: 0.4s ease-in-out;
     color: #a10684;
 }
 
-	/* VERSION DESKTOP */
+
+/* VERSION DESKTOP */
 @media screen and (min-width:1025px) {
 	.container {
 		max-width: 80%;
 		margin: 0 auto;
 	}
 
-	section {
-		
-	}
 
 	aside {
 		display: inline-block;
