--- a/Recettes_cookies/css/style.css
+++ b/Recettes_cookies/css/style.css
@@ -28,7 +28,7 @@ header {
 
 #tittle-intro h1 {
 	font-family: 'Courgette', cursive;
-	color: #5c340c;
+	color: #a10684;
 	text-align: right;
 	padding-top: 50px;
 	margin-bottom: 50px;
