--- a/Recettes_cookies/Cookies_brownies/css/style.css
+++ b/Recettes_cookies/Cookies_brownies/css/style.css
@@ -35,6 +35,10 @@ header {
 	letter-spacing: 10px;
 }
 
+#tittle-intro span .far {
+	margin-left: -12px;
+}
+
 #tittle-intro .percent {
 	font-size: 400%;
 }
