--- a/Recettes_de_fêtes/Recette_galette_pommes_amandes/css/style.css
+++ b/Recettes_de_fêtes/Recette_galette_pommes_amandes/css/style.css
@@ -217,12 +217,14 @@ header {
 }
 
 #images3 img {
-	border: 2px solid #5c340c;
+	border: 3px solid #5c340c;
 	border-radius: 4px;
+	transition: 0.5s ease-in-out;
 }
 
 #images3 img:hover {
 	border: 3px solid #a10684;
+	box-shadow: rgba(0, 0, 0, 0.80) 0px 3px 25px 5px;
 }
 
 #imageGal {
@@ -230,14 +232,16 @@ header {
 }
 
 #imageGal img {
-	border: 2px solid #5c340c;
+	border: 3px solid #5c340c;
 	width: 220px;
 	height: 120px;
 	border-radius: 100px / 60px;
+	transition: 0.5s ease-in-out;
 }
 
 #imageGal img:hover {
 	border: 3px solid #a10684;
+	box-shadow: rgba(0, 0, 0, 0.80) 0px 3px 25px 5px;
 }
 
 #imageGal h4 {
