--- a/Recettes_de_fêtes/css/style.css
+++ b/Recettes_de_fêtes/css/style.css
@@ -151,23 +151,20 @@ header {
 }
 
 #main img {
-	border: 2px solid #5c340c;
+	border: 3px solid #5c340c;
 	border-radius: 5px;
+	transition: 0.5s ease-in-out;
 }
 
 #main a {
 	color: #5c340c;
-}
-
-#main a:hover {
-	color: #a10684;
 	text-decoration: none;
 }
 
 #main img:hover {
+	box-shadow: rgba(0, 0, 0, 0.80) 0px 3px 25px 5px;
 	border: 3px solid #a10684;
 }
-
 
 	/* SOCIAL */
 
