--- a/Recettes_healthy/Pancake_banane/css/style.css
+++ b/Recettes_healthy/Pancake_banane/css/style.css
@@ -214,12 +214,14 @@ header {
 }
 
 #images3 img {
-	border: 2px solid #5c340c;
+	border: 3px solid #5c340c;
 	border-radius: 4px;
+	transition: 0.5s ease-in-out;
 }
 
 #images3 img:hover {
 	border: 3px solid #a10684;
+	box-shadow: rgba(0, 0, 0, 0.80) 0px 3px 25px 5px;
 }
 
 #main4 .about {
@@ -251,13 +253,7 @@ header {
 
    /* social */
 
-#social1 .center {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-
-#social2 .center {
+#social .center {
 	display: flex;
 	justify-content: center;
 	align-items: center;
