--- a/Tartes/Tarte_au_citron/css/style.css
+++ b/Tartes/Tarte_au_citron/css/style.css
@@ -211,6 +211,11 @@ header {
 	line-height: 40px;
 }
 
+.container-block {
+	max-width: 900px;
+	margin: 0 auto;
+}
+
 #social1 .center {
 	display: flex;
 	justify-content: center;
