--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,19 @@
+
+body { 
+	animation: fadeInAnimation ease 2s; 
+	animation-fill-mode: forwards; 
+	animation-iteration-count: 1; 
+} 
+	@keyframes fadeInAnimation { 
+	0% 
+	{ 
+	opacity: 0; 
+	} 
+	100% { 
+	opacity: 1; 
+	} 
+} 
+	
 /* Général */
 html {
 	scroll-behavior: smooth;
