--- a/Recettes_cookies/Cookies_extra_moelleux/css/style.css
+++ b/Recettes_cookies/Cookies_extra_moelleux/css/style.css
@@ -9,7 +9,22 @@ html {
 	outline: none;
 }
 
-body {
+body { 
+	animation: fadeInAnimation ease 3s; 
+	animation-fill-mode: forwards; 
+	animation-iteration-count: 1; 
+} 
+@keyframes fadeInAnimation { 
+	0% 
+	{ 
+	opacity: 0; 
+	} 
+	100% { 
+	opacity: 1; 
+	} 
+}
+
+header {
     margin: 0;
     padding: 0;
     height: 100%;
@@ -18,14 +33,7 @@ body {
 }
 
     /* social */
-
-#social1 .center {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-
-#social2 .center {
+#social .center {
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -47,7 +55,7 @@ body {
 	width: 65px;
 	height: 65px;
 	border-radius: 50px;
-	margin: 30px;
+	margin: 10px 20px 20px;
 	transition: all .5s;
 }
 
@@ -79,45 +87,43 @@ body {
 }
 
 	/* Header */
-
-header {
-    margin: 0;
-    padding: 0;
-	background-color: #ebe3ec;
-}
-
-#tittle-intro h1 {
-	font-family: 'Courgette', cursive;
-	color: #a10684;
-	text-align: right;
-	padding-top: 50px;
-	margin-bottom: 50px;
-	margin-right: 90px;
-	letter-spacing: 10px;
-}
-
-#tittle-intro span .far {
-	margin-left: -12px;
-}
-
-#tittle-intro .percent {
-	font-size: 400%;
-}
-
-.text-intro p {
-	margin-bottom: 20px;
-	color: #5c340c;
-	font-size: 20px;
-	font-family: 'Nunito', sans-serif;
-}
-
-.text-intro span i {
-	color: #a10684;
-	font-size: 20px;
+#logo h1 {
 	text-align: center;
+	padding-bottom: 30px;
+	margin: 0;
+	background-color: #ece8ec;
+	border-bottom: 1px solid #c5c5c6;
+}
+
+.text-3d {
+	text-transform: uppercase;
+	font-size: 50px;
+	font-weight: 500;
+	color: #a10684;
+	letter-spacing: 10px;
+	text-shadow:
+		1px 1px #8b8a8a,
+		1px 2px #8b8a8a,
+		1px 3px #8b8a8a,
+		1px 4px #8b8a8a,
+		1px 5px #8b8a8a,
+		1px 6px #8b8a8a,
+		1px 7px #8b8a8a,
+		1px 8px #8b8a8a,
+		1px 9px #8b8a8a,
+		1px 10px 1px #8b8a8a,
+	1px 18px 6px #2d2d2d66,
+	1px 22px 10px #2d2d2d66,
+	1px 25px 35px #2d2d2d66,
+	1px 30px 60px #2d2d2d66;
 }
 
 	/* NAV-BAR */
+.nav-icon img {
+	width: 70px;
+	height: auto;
+	transform: rotate(-12deg) translateX(5px);
+}
 
 .navbar {
     padding: 0px 15px;
@@ -131,7 +137,6 @@ header {
     font-size: 20px;
     font-weight: 600;
     margin: 0 auto;
-
 }
 
 #navbarCollapse .nav-link:hover {
@@ -185,11 +190,6 @@ header {
 }
 
 	/* MAIN TITRE*/
-
-#main .container {
-    max-width: 80%;
-}
-
 #main h2 {
     color: #5c340c;
     font-family: 'Parisienne', cursive;
@@ -198,28 +198,32 @@ header {
 }
 
 .imgTop img {
-    width: 90%;
+    width: 60%;
     margin-right: auto;
     margin-left: auto;
+	border: 1px solid #a10684;
 }
 
 #main1 .preTexte {
 	margin: 60px auto 40px;
 	font-size: 1.3rem;
 	text-align: center;
+	padding: 0 60px;
 }
 
 .card {
 	border-radius: 4px;
 	background-color: #f1f1f1;
-	padding-top: 10px;
-	padding-bottom: 10px;
 	border: 1px solid #a10684;
-	margin-top: 10px;
-	margin-bottom: 10px;
 }
 
 #main2 h3 {
+	font-family: 'Handlee', cursive;
+	margin-bottom: 15px;
+	color: #5c340c;
+}
+
+#main3 h3 {
 	font-family: 'Handlee', cursive;
 	margin-bottom: 15px;
 	color: #5c340c;
@@ -229,12 +233,6 @@ header {
 	font-size: 1.2rem;
 }
 
-#main3 h3 {
-	font-family: 'Handlee', cursive;
-	margin-bottom: 15px;
-	color: #5c340c;
-}
-
 #main3 span i {
 	font-size: 20px;
 	color: #a10684;
@@ -242,41 +240,31 @@ header {
 	margin-left: 3px;
 }
 
-#images3 {
-	padding-top: 100px;
-	width: 100%;
-}
-
-#images3 img {
-	border: 3px solid #5c340c;
-	border-radius: 4px;
-	transition: 0.5s ease-in-out;
-}
-
-#images3 img:hover {
-	border: 3px solid #a10684;
-	box-shadow: rgba(0, 0, 0, 0.80) 0px 3px 25px 5px;
-}
-
 #images2 img {
-	margin: 40px auto;
-	width: 80%;
-	
+	margin: 40px;
+	margin-right: auto;
+    margin-left: auto;
+	width: 58%;
+	border: 1px solid #a10684;
+}
+
+#main4 .about-card {
+	width: 70%;
+	margin: 0 auto;
 }
 
 #main4 .about {
 	margin: 20px 30px 0;
-	font-size: 1.3rem;
+	font-size: 1.1rem;
 	text-align: center;
 	line-height: 40px;
 }
 
 #main4 .gras {
 	text-align: center;
-	margin-top: 10px;
 	font-family: 'Handlee', cursive;
 	color: #5c340c;
-	font-size: 1.8rem;
+	font-size: 1.5rem;
 }
 
 #main4 img {
@@ -289,75 +277,69 @@ header {
 }
 
 	/* FORMULAIRE */
-
-#formulaire {
-    margin-top: 40px;
-    margin-bottom: 20px;
-}
-
 form {
-    max-width: 1100px;
-    margin: 0 auto;
+	max-width: 1000px;
+	margin: 0 auto 40px;
 }
 
-#formulaire .title {
-    font-family: 'Handlee', cursive;
-    color: #5c340c;
-    font-size: 25px;
-    margin-bottom: 20px;
+.titre-form h3 {
+	font-family: 'Handlee', cursive;
+	text-align: center;
+	margin: 40px auto 0;
+	color: #5c340c;
 }
 
-#formulaire em {
-    color: #ff0000;
+.form-goup input {
+	padding: 5px 0;
+	background-color: #f1f1f1;
+	border-radius: 3px;
+	width: 100%;
+	font-family: 'Arial';
+	border: 1px solid;
 }
 
-#formulaire input {
-    padding: 8px 0;
-    background-color: #f1f1f1;
-    border-radius: 3px;
-    width: 100%;
-    font-family: 'Arial';
-    border: 1px solid;
+.form-goup #submit {
+	margin-top: 24px;
+	width: 100%;
+	padding: 5px 0;
+	border-radius: 3px;
+	background-color: #f1f1f1;
+	transition: 0.5s ease-in-out;
 }
 
-#formulaire textarea {
-    background-color: #f1f1f1;
-    border-radius: 3px;
-    border: 1px solid;
-    width: 100%;
+.form-goup #submit:hover {
+	background-color: #ebd5eb;
+	color: #000;
 }
 
-#formulaire #submit {
-    margin-top: 8px;
-    width: 100%;
-    padding: 8px 0;
-    border-radius: 3px;
-    background-color: #f1f1f1;
+form .info {
+	text-align: center;
+	font-size: .8rem;
+	color: #616161;
+}
+	
+	/* FOOTER */
+.footer {
+	padding: 10px 0 0;
+	text-align: center;
 }
 
-#formulaire #submit:hover {
-    background-color: #582900;
-    color: #fff;
-    transition: 0.4s ease-in-out;
+.section-title {
+	margin-bottom: 2px;
 }
 
-    /* FOOTER */
+.section-title a {
+	text-decoration: none;
+}
 
 .coul {
 	color: #582900;
-}
+}  
 
-.footer i {
-	font-size: 40px;
-	margin: 30px 0 20px;
-	color: #5c340c;
-	height: 30px;
-}
-
-.footer i:hover {
-    font-size: 50px;
-    transition: 0.3s ease-in-out;
-    color: #a10684;
+.text1 {
+	margin-bottom: 3px;
+	font-size: .8rem;
+	color: #616161;
 }
 
 /* VERSION DESKTOP */
