--- a/Tartes/Tarte_au_citron/css/style.css
+++ b/Tartes/Tarte_au_citron/css/style.css
@@ -9,6 +9,21 @@ html {
 	outline: none;
 }
 
+body { 
+	animation: fadeInAnimation ease 3s; 
+	animation-fill-mode: forwards; 
+	animation-iteration-count: 1; 
+} 
+@keyframes fadeInAnimation { 
+	0% 
+	{ 
+	opacity: 0; 
+	} 
+	100% { 
+	opacity: 1; 
+	} 
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -18,45 +33,43 @@ body {
 }
 
 	/* Header */
-
-header {
-	margin: 0;
-    padding: 0;
-	background-color: #ebe3ec;
-}
-
-#tittle-intro h1 {
-	font-family: 'Courgette', cursive;
-	color: #a10684;
-	text-align: right;
-	padding-top: 50px;
-	margin-bottom: 50px;
-	margin-right: 90px;
-	letter-spacing: 10px;
-}
-
-#tittle-intro span .far {
-	margin-left: -12px;
-}
-
-#tittle-intro .percent {
-	font-size: 400%;
-}
-
-.text-intro p {
-	margin-bottom: 18px;
-	color: #5c340c;
-	font-size: 20px;
-	font-family: 'Nunito', sans-serif;
-}
-
-.text-intro span i {
-	color: #a10684;
-	font-size: 20px;
+#logo h1 {
 	text-align: center;
+	padding-bottom: 30px;
+	margin: 0;
+	background-color: #ece8ec;
+	border-bottom: 1px solid #c5c5c6;
 }
 
-    /* NAV-BAR */
+.text-3d {
+	text-transform: uppercase;
+	font-size: 50px;
+	font-weight: 500;
+	color: #a10684;
+	letter-spacing: 10px;
+	text-shadow:
+		1px 1px #8b8a8a,
+		1px 2px #8b8a8a,
+		1px 3px #8b8a8a,
+		1px 4px #8b8a8a,
+		1px 5px #8b8a8a,
+		1px 6px #8b8a8a,
+		1px 7px #8b8a8a,
+		1px 8px #8b8a8a,
+		1px 9px #8b8a8a,
+		1px 10px 1px #8b8a8a,
+	1px 18px 6px #2d2d2d66,
+	1px 22px 10px #2d2d2d66,
+	1px 25px 35px #2d2d2d66,
+	1px 30px 60px #2d2d2d66;
+}
+
+/* NAV-BAR */
+.nav-icon img {
+	width: 70px;
+	height: auto;
+	transform: rotate(-12deg) translateX(5px);
+}
 
 .navbar {
 	padding: 0px 15px;
@@ -123,7 +136,6 @@ header {
 }
 
     /* MAIN TITRE*/
-
 #main .container {
 	max-width: 85%;
 }
@@ -136,20 +148,16 @@ header {
 }
 
 .imgTop img {
-	width: 90%;
+	width: 60%;
 	margin: 0 auto 50px;
+	border: 1px solid #a10684;
 }
 
     /* MAIN TEXTE*/
-
 #main1 .preTexte {
-	margin: 10px 0 50px;
+	margin-bottom: 40px;
 	font-size: 1.3rem;
 	text-align: center;
-}
-
-#main1 .preTexte i {
-	vertical-align: middle;
 }
 
 .ingredients {
@@ -165,11 +173,7 @@ header {
 .card {
 	border-radius: 4px;
 	background-color: #f1f1f1;
-	padding-top: 10px;
-	padding-bottom: 10px;
 	border: 1px solid #a10684;
-	margin-top: 10px;
-	margin-bottom: 10px;
 }
 
 #main2 h3 {
@@ -192,13 +196,15 @@ header {
 }
 
 #images1 img {
-	width: 70%;
-	margin: 0 auto;
+	width: 60%;
+	margin: 25px auto;
+	border: 1px solid #a10684;
 }
 
 #images2 img {
-	width: 80%;
+	width: 60%;
 	margin: 40px auto;
+	border: 1px solid #a10684;
 }
 
 #main4 {
@@ -209,17 +215,6 @@ header {
 	font-size: 1.3rem;
 	text-align: center;
 	line-height: 40px;
-}
-
-.container-block {
-	max-width: 900px;
-	margin: 0 auto;
-}
-
-#social1 .center {
-	display: flex;
-	justify-content: center;
-	align-items: center;
 }
 
 .icon {
@@ -246,6 +241,14 @@ header {
 	justify-content: center;
 	align-items: center;
 	overflow: hidden;
+}
+
+.icon {
+	width: 65px;
+	height: 65px;
+	border-radius: 50px;
+	margin: 10px 20px 20px;
+	transition: all .5s;
 }
 
 .icon:nth-child(1) {
@@ -275,29 +278,15 @@ header {
 	box-shadow: 0 0 0 6px #ff3346;
 }
 
-#images3 {
-	padding-top: 50px;
-	width: 100%;
-}
-
-#images3 img {
-	border: 3px solid #5c340c;
-	border-radius: 4px;
-	transition: 0.5s ease-in-out;
-}
-
-#images3 img:hover {
-	border: 3px solid #a10684;
-	box-shadow: rgba(0, 0, 0, 0.80) 0px 3px 25px 5px;
-}
-
-#images__lateral {
-    padding-top: 100px;
-	width: 100%;
-}
-
 .img_tarte {
-    margin: 50px auto 0;
+	width: 80%;
+    /*margin: 0 auto 60px;*/
+	border: 1px solid #a10684;
+}
+
+#main4 .about-card {
+	width: 65%;
+	margin: 0 auto;
 }
 
 #main4 .gras {
@@ -305,12 +294,12 @@ header {
 	margin-top: 20px;
 	font-family: 'Handlee', cursive;
 	color: #5c340c;
-	font-size: 1.8rem;
+	font-size: 1.5rem;
 }
 
 #main4 .avatar img {
 	border-radius: 100px;
-	width: 12%;
+	width: 10%;
 	border: 2px solid #a10684;
     margin: 30px auto 20px;
     display: flex;
@@ -324,30 +313,20 @@ header {
 }
 
     /* FORMULAIRE */
-
-#formulaire {
-	margin-top: 40px;
-	margin-bottom: 20px;
-}
-
 form {
-	max-width: 1100px;
-	margin: 0 auto;
+	max-width: 1000px;
+	margin: 0 auto 40px;
 }
 
-#formulaire .title {
+.titre-form h3 {
 	font-family: 'Handlee', cursive;
+	text-align: center;
+	margin: 40px auto 0;
 	color: #5c340c;
-	font-size: 25px;
-	margin-bottom: 20px;
 }
 
-#formulaire em {
-	color: #ff0000;
-}
-
-#formulaire input {
-	padding: 8px 0;
+.form-goup input {
+	padding: 5px 0;
 	background-color: #f1f1f1;
 	border-radius: 3px;
 	width: 100%;
@@ -355,44 +334,62 @@ form {
 	border: 1px solid;
 }
 
-#formulaire textarea {
-	background-color: #f1f1f1;
-	border-radius: 3px;
-	border: 1px solid;
+.form-goup #submit {
+	margin-top: 24px;
 	width: 100%;
-}
-
-#formulaire #submit {
-	margin-top: 8px;
-	width: 100%;
-	padding: 8px 0;
+	padding: 5px 0;
 	border-radius: 3px;
 	background-color: #f1f1f1;
+	transition: 0.5s ease-in-out;
 }
 
-#formulaire #submit:hover {
-	background-color: #582900;
-	color: #fff;
-	transition: 0.4s ease-in-out;
+.form-goup #submit:hover {
+	background-color: #ebd5eb;
+	color: #000;
 }
 
-   /* FOOTER */
+form .info {
+	text-align: center;
+	font-size: .8rem;
+	color: #616161;
+}
+	
+	/* FOOTER */
+.footer {
+	padding: 10px 0 0;
+	text-align: center;
+}
+
+.section-title {
+	margin-bottom: 2px;
+}
+
+.section-title a {
+	text-decoration: none;
+}
 
 .coul {
 	color: #582900;
+}  
+
+.text1 {
+	margin-bottom: 3px;
+	font-size: .8rem;
+	color: #616161;
 }
 
-.footer i {
-    font-size: 40px;
-    margin: 20px 0 20px;
-    color: #5c340c;
-    height: 30px;
-}
+	/* VERSION DESKTOP */
+@media screen and (min-width:1025px) {
+	.container {
+		max-width: 80%;
+		margin: 0 auto;
+	}
 
-.footer i:hover {
-    font-size: 50px;
-    transition: 0.3s ease-in-out;
-    color: #a10684;
+	aside {
+		display: inline-block;
+		vertical-align: center;
+		width: 30%;
+	}
 }
 
 
