--- a/A_Propos/css/style.css
+++ b/A_Propos/css/style.css
@@ -17,35 +17,59 @@ body {
 	border-top: 8px solid #a10684;
 }
 
+body { 
+	animation: fadeInAnimation ease 3s; 
+	animation-fill-mode: forwards; 
+	animation-iteration-count: 1; 
+} 
+@keyframes fadeInAnimation { 
+	0% 
+	{ 
+	opacity: 0; 
+	} 
+	100% { 
+	opacity: 1; 
+	} 
+}
+
 	/* Header */
-
-header {
-	background: url(../img/fond-logoR.jpg);
-	background-color: #ebe3ec;
-	height: 30vh;
-}
-	
-#logo img {
-	display: block;
-	margin: 0 auto;
-	width: 280px;
-	padding: 10px 0;
-}
-
-.text-intro p {
-	margin-bottom: 18px;
-	color: #5c340c;
-	font-size: 20px;
-	font-family: 'Nunito', sans-serif;
-}
-
-.text-intro span i {
-	color: #a10684;
-	font-size: 20px;
+#logo h1 {
 	text-align: center;
+	padding-bottom: 30px;
+	margin: 0;
+	background-color: #ece8ec;
+	border-bottom: 1px solid #c5c5c6;
+}
+
+.text-3d {
+	text-transform: uppercase;
+	font-size: 50px;
+	font-weight: 500;
+	color: #a10684;
+	letter-spacing: 10px;
+	text-shadow:
+		1px 1px #8b8a8a,
+		1px 2px #8b8a8a,
+		1px 3px #8b8a8a,
+		1px 4px #8b8a8a,
+		1px 5px #8b8a8a,
+		1px 6px #8b8a8a,
+		1px 7px #8b8a8a,
+		1px 8px #8b8a8a,
+		1px 9px #8b8a8a,
+		1px 10px 1px #8b8a8a,
+	1px 18px 6px #2d2d2d66,
+	1px 22px 10px #2d2d2d66,
+	1px 25px 35px #2d2d2d66,
+	1px 30px 60px #2d2d2d66;
 }
 
 	/* NAV-BAR */
+.nav-icon img {
+	width: 70px;
+	height: auto;
+	transform: rotate(-12deg) translateX(5px);
+}
 
 .navbar {
 	padding: 0px 15px;
@@ -59,7 +83,6 @@ header {
 	font-size: 20px;
 	font-weight: 600;
 	margin: 0 auto;
-
 }
 
 #navbarCollapse .nav-link:hover {
@@ -114,7 +137,6 @@ header {
 
 
 	/* MAIN CONTENT */
-
 .post-header h2 {
 	margin-top: 80px;
 	margin-bottom: 70px;
@@ -131,10 +153,28 @@ header {
 }
 
 .avatar img {
-	margin: 40px 0;
-	border-radius: 100px;
-	width: 10%;
 	border: 2px solid #a10684;
+	width: 15%;
+	height: auto;
+	margin: 30px auto 20px;
+    display: flex;
+    justify-content: center;
+	overflow: hidden;
+    border-radius: 42% 56% 72% 28% / 42% 42% 56% 48%;
+	background-size: cover;
+    animation: blob 4s linear infinite;
+}
+
+@keyframes blob {
+    0%, 100% {
+        border-radius: 42% 56% 72% 28% / 42% 42% 56% 48%;
+    }
+    33% {
+        border-radius: 42% 28% 48% 48% / 28% 28% 72% 72%;
+    }
+    66% {
+        border-radius: 100% 56% 56% 100% / 100% 100% 56% 56%;
+    }
 }
 
 	/* social */
@@ -175,11 +215,6 @@ header {
 	filter: drop-shadow(0 0 3px #1877f2);
 }
 
-.icon:nth-child(3) {
-	color: #ff3346;
-	filter: drop-shadow(0 0 3px #ff3346);
-}
-
 .icon:nth-child(1):hover {
 	box-shadow: 0 0 0 6px #a10684;
 }
@@ -188,75 +223,28 @@ header {
 	box-shadow: 0 0 0 6px #1877f2;
 }
 
-.icon:nth-child(3):hover {
-	box-shadow: 0 0 0 6px #ff3346;
-}
-
-	/* NEWSLETTER  */
-
-#newsletter {
-	margin: 20px 0 20px;
-}
-
-#newsletter span i {
-	color: #a10684;
-	font-size: 20px;
+	/* FOOTER */
+.footer {
+	padding: 10px 0 0;
 	text-align: center;
 }
 
-#newsletter p {
-	font-size: 20px;
-	font-family: 'Nunito', sans-serif;
-	color: #5c340c;
+.section-title {
+	margin-bottom: 2px;
 }
 
-	/* FORMULAIRE */
-
-form {
-	max-width: 1100px;
-	margin: 0 auto;
+.section-title a {
+	text-decoration: none;
 }
-
-.form-goup input {
-	padding: 5px 0;
-	background-color: #f1f1f1;
-	border-radius: 3px;
-	width: 100%;
-	font-family: 'Arial';
-	border: 1px solid;
-}
-
-.form-goup #submit {
-	margin-top: 24px;
-	width: 100%;
-	padding: 5px 0;
-	border-radius: 3px;
-	background-color: #f1f1f1;
-}
-
-.form-goup #submit:hover {
-	background-color: #582900;
-	color: #fff;
-	transition: 0.4s ease-in-out;
-}
-
-	/* FOOTER */
 
 .coul {
 	color: #582900;
-}
+}  
 
-.footer i {
-	font-size: 40px;
-	margin: 30px 0 20px;
-	color: #582900;
-	height: 30px;
-}
-
-.footer i:hover {
-	font-size: 50px;
-	transition: 0.3s ease-in-out;
-	color: #a10684;
+.text1 {
+	margin-bottom: 3px;
+	font-size: .8rem;
+	color: #616161;
 }
 
 /* VERSION DESKTOP */
