--- a/Recettes_cookies/Cookies_brownies/css/style.css
+++ b/Recettes_cookies/Cookies_brownies/css/style.css
@@ -9,6 +9,21 @@ html {
 	outline: none;
 }
 
+body { 
+	animation: fadeInAnimation ease 3s; 
+	animation-fill-mode: forwards; 
+	animation-iteration-count: 1; 
+} 
+@keyframes fadeInAnimation { 
+	0% 
+	{ 
+	opacity: 0; 
+	} 
+	100% { 
+	opacity: 1; 
+	} 
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -18,45 +33,43 @@ body {
 }
 
 	/* Header */
-
-header {
-    margin: 0;
-    padding: 0;
-	background-color: #ebe3ec;
-}
-
-#tittle-intro h1 {
-	font-family: 'Courgette', cursive;
-	color: #a10684;
-	text-align: right;
-	padding-top: 50px;
-	margin-bottom: 50px;
-	margin-right: 90px;
-	letter-spacing: 10px;
-}
-
-#tittle-intro span .far {
-	margin-left: -12px;
-}
-
-#tittle-intro .percent {
-	font-size: 400%;
-}
-
-.text-intro p {
-	margin-bottom: 20px;
-	color: #5c340c;
-	font-size: 20px;
-	font-family: 'Nunito', sans-serif;
-}
-
-.text-intro span i {
-	color: #a10684;
-	font-size: 20px;
+#logo h1 {
 	text-align: center;
+	padding-bottom: 30px;
+	margin: 0;
+	background-color: #ece8ec;
+	border-bottom: 1px solid #c5c5c6;
+}
+	
+.text-3d {
+	text-transform: uppercase;
+	font-size: 50px;
+	font-weight: 500;
+	color: #a10684;
+	letter-spacing: 10px;
+	text-shadow:
+		1px 1px #8b8a8a,
+		1px 2px #8b8a8a,
+		1px 3px #8b8a8a,
+		1px 4px #8b8a8a,
+		1px 5px #8b8a8a,
+		1px 6px #8b8a8a,
+		1px 7px #8b8a8a,
+		1px 8px #8b8a8a,
+		1px 9px #8b8a8a,
+		1px 10px 1px #8b8a8a,
+	1px 18px 6px #2d2d2d66,
+	1px 22px 10px #2d2d2d66,
+	1px 25px 35px #2d2d2d66,
+	1px 30px 60px #2d2d2d66;
 }
 
 	/* NAV-BAR */
+.nav-icon img {
+	width: 70px;
+	height: auto;
+	transform: rotate(-12deg) translateX(5px);
+}
 
 .navbar {
 	padding: 0px 15px;
@@ -124,7 +137,6 @@ header {
 }
 
 	/* MAIN TITRE*/
-
 #main .container {
 	max-width: 85%;
 }
@@ -132,13 +144,14 @@ header {
 #main h2 {
 	color: #5c340c;
 	font-family: 'Parisienne', cursive;
-	margin: 90px auto;
+	margin: 90px auto 40px;
 	font-size: 60px;
 }
 
 .imgTop img {
-	width: 90%;
-	margin: 0 auto;
+	width: 70%;
+	margin: 0 auto 10px;
+	border: 1px solid #a10684;
 }
 
 #main1 .preTexte {
@@ -195,17 +208,19 @@ header {
 }
 
 #images1 img {
-	width: 45%;
+	width: 30%;
 	margin-right: auto;
 	margin-left: auto;
+	border: 1px solid #a10684;
 }
 
 #images2 img {
 	margin-top: 40px;
 	margin-bottom: 40px;
-	width: 80%;
+	width: 60%;
 	margin-right: auto;
 	margin-left: auto;
+	border: 1px solid #a10684;
 }
 
 #images_cadre1 img {
@@ -232,32 +247,50 @@ header {
 	box-shadow: rgba(0, 0, 0, 0.80) 0px 3px 25px 5px;
 }
 
-#main4 .about {
-	margin-top: 20px;
-	font-size: 1.3rem;
+#main4 .about-card {
+	width: 65%;
+	margin: 0 auto;
 	text-align: center;
-	line-height: 40px;
+}
+
+.about {
+	margin-top: 20px;
+	padding: 0 10px;
 }
 
 #main4 .gras {
-	text-align: center;
-	margin-top: 10px;
+	margin: 0;
 	font-family: 'Handlee', cursive;
 	color: #5c340c;
-	font-size: 1.8rem;
+	font-size: 1.5rem;
 }
 
-#main4 img {
-	border-radius: 100px;
-	width: 10%;
+#main4 .avatar img {
 	border: 2px solid #a10684;
-	text-align: center;
-	margin-left: auto;
-	margin-right: auto;
+	width: 15%;
+	height: auto;
+	margin: 30px auto 20px;
+    display: flex;
+    justify-content: center;
+	overflow: hidden;
+    border-radius: 42% 56% 72% 28% / 42% 42% 56% 48%;
+	background-size: cover;
+    animation: blob 4s linear infinite;
+}
+
+@keyframes blob {
+    0%, 100% {
+        border-radius: 42% 56% 72% 28% / 42% 42% 56% 48%;
+    }
+    33% {
+        border-radius: 42% 28% 48% 48% / 28% 28% 72% 72%;
+    }
+    66% {
+        border-radius: 100% 56% 56% 100% / 100% 100% 56% 56%;
+    }
 }
 
    /* social */
-
 #social1 .center {
 	display: flex;
 	justify-content: center;
@@ -300,11 +333,6 @@ header {
 	filter: drop-shadow(0 0 3px #1877f2);
 }
 
-.icon:nth-child(3) {
-	color: #ff3346;
-	filter: drop-shadow(0 0 3px #ff3346);
-}
-
 .icon:nth-child(1):hover {
 	box-shadow: 0 0 0 6px #a10684;
 }
@@ -313,35 +341,21 @@ header {
 	box-shadow: 0 0 0 6px #1877f2;
 }
 
-.icon:nth-child(3):hover {
-	box-shadow: 0 0 0 6px #ff3346;
-}
-
 	/* FORMULAIRE */
-
-#formulaire {
-	margin-top: 40px;
-	margin-bottom: 20px;
-}
-
 form {
-	max-width: 1100px;
-	margin: 0 auto;
+	max-width: 1000px;
+	margin: 0 auto 40px;
 }
 
-#formulaire .title {
+.titre-form h3 {
 	font-family: 'Handlee', cursive;
+	text-align: center;
+	margin: 40px auto 0;
 	color: #5c340c;
-	font-size: 25px;
-	margin-bottom: 20px;
 }
 
-#formulaire em {
-	color: #ff0000;
-}
-
-#formulaire input {
-	padding: 8px 0;
+.form-goup input {
+	padding: 5px 0;
 	background-color: #f1f1f1;
 	border-radius: 3px;
 	width: 100%;
@@ -349,44 +363,48 @@ form {
 	border: 1px solid;
 }
 
-#formulaire textarea {
-	background-color: #f1f1f1;
-	border-radius: 3px;
-	border: 1px solid;
+.form-goup #submit {
+	margin-top: 24px;
 	width: 100%;
-}
-
-#formulaire #submit {
-	margin-top: 8px;
-	width: 100%;
-	padding: 8px 0;
+	padding: 5px 0;
 	border-radius: 3px;
 	background-color: #f1f1f1;
+	transition: 0.5s ease-in-out;
 }
 
-#formulaire #submit:hover {
-	background-color: #582900;
-	color: #fff;
-	transition: 0.4s ease-in-out;
+.form-goup #submit:hover {
+	background-color: #ebd5eb;
+	color: #000;
+}
+
+form .info {
+	text-align: center;
+	font-size: .8rem;
+	color: #616161;
 }
 
 	/* FOOTER */
+.footer {
+	padding: 10px 0 0;
+	text-align: center;
+}
+
+.section-title {
+	margin-bottom: 2px;
+}
+
+.section-title a {
+	text-decoration: none;
+}
 
 .coul {
 	color: #582900;
-}
+}  
 
-.footer i {
-	font-size: 40px;
-	margin: 30px 0 20px;
-	color: #5c340c;
-	height: 30px;
-}
-
-.footer i:hover {
-    font-size: 50px;
-    transition: 0.3s ease-in-out;
-    color: #a10684;
+.text1 {
+	margin-bottom: 3px;
+	font-size: .8rem;
+	color: #616161;
 }
 
 	/* VERSION DESKTOP */
