--- a/Recettes_de_cremes/css/style.css
+++ b/Recettes_de_cremes/css/style.css
@@ -1,4 +1,18 @@
 /* Général */
+body { 
+	animation: fadeInAnimation ease 2s; 
+	animation-fill-mode: forwards; 
+	animation-iteration-count: 1; 
+} 
+@keyframes fadeInAnimation { 
+0% { 
+	opacity: 0; 
+	} 
+	100% { 
+	opacity: 1; 
+	} 
+} 
+
 html {
 	scroll-behavior: smooth;
 }
