--- a/Tartes/Tarte_au_citron/css/style.css
+++ b/Tartes/Tarte_au_citron/css/style.css
@@ -298,13 +298,28 @@ body {
 }
 
 #main4 .avatar img {
-	border-radius: 100px;
-	width: 10%;
 	border: 2px solid #a10684;
-    margin: 30px auto 20px;
+	width: 15%;
+	height: auto;
+	margin: 30px auto 20px;
     display: flex;
     justify-content: center;
-    
+	overflow: hidden;
+    border-radius: 42% 56% 72% 28% / 42% 42% 56% 48%;
+	background-size: cover;
+    animation: blob 4s linear infinite;
+}
+
+@keyframes blob {
+    0%, 100% {
+        border-radius: 42% 56% 72% 28% / 42% 42% 56% 48%;
+    }
+    33% {
+        border-radius: 42% 28% 48% 48% / 28% 28% 72% 72%;
+    }
+    66% {
+        border-radius: 100% 56% 56% 100% / 100% 100% 56% 56%;
+    }
 }
 
 #main4 .lemon i {
