--- a/Recettes_healthy/Pancake_banane/css/style.css
+++ b/Recettes_healthy/Pancake_banane/css/style.css
@@ -1,3 +1,18 @@
+body { 
+	animation: fadeInAnimation ease 2s; 
+	animation-fill-mode: forwards; 
+	animation-iteration-count: 1; 
+	} 
+@keyframes fadeInAnimation { 
+	0% 
+	{ 
+	opacity: 0; 
+	} 
+	100% { 
+	opacity: 1; 
+	} 
+}
+
 /* Général */
 html {
 	scroll-behavior: smooth;
@@ -137,10 +152,9 @@ header {
 }
 
 .imgTop img {
-	width: 90%;
-	margin-right: auto;
-	margin-left: auto;
-	margin-bottom: 50px;
+	width: 65%;
+	margin: 0 auto 50px;
+	border: 1px solid #a10684;
 }
 
 	/* MAIN TEXTE*/
@@ -158,7 +172,7 @@ header {
 	padding-bottom: 10px;
 	border: 1px solid #a10684;
 	margin-top: 10px;
-	margin-bottom: 10px;
+	margin-bottom: 60px;
 }
 
 #main2 h3 {
@@ -194,18 +208,16 @@ header {
 }
 
 #images1 img {
-	margin-top: 10px;
 	width: 50%;
-	margin-right: auto;
-	margin-left: auto;
+	margin: 0 auto 50px;
+	border: 1px solid #a10684;
 }
 
 #images2 img {
-	margin-top: 40px;
-	margin-bottom: 40px;
-	width: 80%;
-	margin-right: auto;
-	margin-left: auto;
+	margin: 50px 0 0 0;
+	width: 60%;
+	margin: 0 auto 50px;
+	border: 1px solid #a10684;
 }
 
 #images3 {
@@ -225,6 +237,7 @@ header {
 }
 
 #main4 .about {
+	padding: 0 20px;
 	margin-top: 20px;
 	font-size: 1.3rem;
 	text-align: center;
@@ -307,30 +320,20 @@ header {
 }
 
 	/* FORMULAIRE */
-
-#formulaire {
-	margin-top: 40px;
-	margin-bottom: 20px;
-}
-
 form {
-	max-width: 1100px;
-	margin: 0 auto;
+	max-width: 1000px;
+	margin: 0 auto 40px;
 }
 
-#formulaire .title {
+.titre-form h3 {
 	font-family: 'Handlee', cursive;
+	text-align: center;
+	margin: 40px auto 0;
 	color: #5c340c;
-	font-size: 25px;
-	margin-bottom: 20px;
 }
 
-#formulaire em {
-	color: #ff0000;
-}
-
-#formulaire input {
-	padding: 8px 0;
+.form-goup input {
+	padding: 5px 0;
 	background-color: #f1f1f1;
 	border-radius: 3px;
 	width: 100%;
@@ -338,25 +341,24 @@ form {
 	border: 1px solid;
 }
 
-#formulaire textarea {
-	background-color: #f1f1f1;
-	border-radius: 3px;
-	border: 1px solid;
+.form-goup #submit {
+	margin-top: 24px;
 	width: 100%;
-}
-
-#formulaire #submit {
-	margin-top: 8px;
-	width: 100%;
-	padding: 8px 0;
+	padding: 5px 0;
 	border-radius: 3px;
 	background-color: #f1f1f1;
+	transition: 0.5s ease-in-out;
 }
 
-#formulaire #submit:hover {
-	background-color: #582900;
-	color: #fff;
-	transition: 0.4s ease-in-out;
+.form-goup #submit:hover {
+	background-color: #ebd5eb;
+	color: #000;
+}
+
+form .info {
+	text-align: center;
+	font-size: .8rem;
+	color: #616161;
 }
 
 	/* FOOTER */
