--- a/Recettes_cookies/css/style.css
+++ b/Recettes_cookies/css/style.css
@@ -138,10 +138,6 @@ body {
 }
 
 	/* MAIN */
-#main .container {
-	max-width: 100%;
-}
-
 #titreTop h2 {
 	margin: 90px auto 50px;
 	text-align: center;
@@ -150,31 +146,69 @@ body {
 	font-family: 'Parisienne', cursive;
 }
 
-#main h5 {
-	margin-top: 20px;
-	font-family: 'Handlee', cursive;
-	font-size: 25px;
+#main .container-grille {
+	max-width: 1400px;
+	width: 80%;
+	height: auto;
+	margin: 30px auto;
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	justify-content: center;
+	gap: 10px;
 }
 
-#main img {
-	border: 2px solid #5c340c;
-	border-radius: 5px;
+.item {
+	width: 100%;
+	height: 100%;
+	position: relative;
 }
 
-#main img {
-	border: 3px solid #5c340c;
-	border-radius: 5px;
-	transition: 0.5s ease-in-out;
+.item {
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
 }
 
-#main a {
-	color: #5c340c;
-	text-decoration: none;
+#main .grid-item img {
+	max-width: 100%;
+	width: 90%;
+	height: 100%;
+	object-fit: cover;
+	object-position: 50% 50%;
+	cursor: pointer;
+	transition: .4s ease-in-out;
+	border: 1px solid #000;
 }
 
-#main img:hover {
-	box-shadow: rgba(0, 0, 0, 0.80) 0px 3px 25px 5px;
-	border: 3px solid #a10684;
+.grid-item:hover img {
+	transform: scale(1.1);
+}
+
+.item .text {
+	opacity: 0;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	color: #fff;
+	font-size: 1.3rem;
+	pointer-events: none;
+	z-index: 4;
+	transition: .3s ease-in-out;
+	-webkit-backdrop-filter: blur(6px) saturate(1.9);
+	backdrop-filter: blur(6px) saturate(1.9);
+	text-shadow: 0 0 0.2em #000, 0 0 0.2em #000,
+	0 0 0.2em #000, 
+	-1px 0 #000, 0 1px #000,
+	1px 0 #000, 0 -1px #000;
+}
+
+.item:hover .text {
+	opacity: 1;
+	animation: move-down .3s linear;
+	padding: 0.5em;
+	width: 100%;
+	text-align: center;
 }
 
 	/* social */
